# domain_patterns

./: .gitignore  Cargo.toml  README.md
domain_derive/: Cargo.toml  README.md
domain_derive/src/: domain_event.rs  domain_events.rs  entity.rs  lib.rs
domain_derive/tests/: procedural_tests.rs
domain_patterns/: Cargo.toml  LICENSE  README.md
domain_patterns/src/: collections.rs  command.rs  lib.rs  models.rs  query.rs
domain_patterns/tests/: event_tests.rs  integration_tests.rs
domain_patterns/tests/common/: collections.rs  commands.rs  commands_old.rs  errors.rs  events.rs  models.rs
src/: collections.rs  command.rs  domain_event.rs  domain_events.rs  entity.rs  event.rs  lib.rs  message.rs  models.rs  type_checks.rs  value_object.rs
tests/: event_tests.rs  integration_tests.rs  procedural_tests.rs
tests/common/: collections.rs  commands.rs  errors.rs  events.rs  mod.rs  models.rs
