[package]
name = "domain_derive"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
domain_patterns = "0.1.4"
syn = { version = "1.0.5", features = ["derive"] }
quote = "1.0.2"

[dev-dependencies]
uuid = "0.7.4"
