[package]
name = "domain_patterns"
version = "0.1.96"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
description = "Domain patterns holds patterns from the world of Domain Driven Design."
keywords = ["domain", "design", "patterns", "database", "architecture"]
categories = ["database", "data-structures", "rust-patterns"]
repository = "https://github.com/prismaphonic/domain-patterns"
documentation = "https://docs.rs/domain_patterns"
readme = "README.md"
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }

[dev-dependencies]
uuid = { version = "0.7.4", features = ["serde", "v4"] }
serde_json = "1.0.40"
chrono = "0.4.7"
regex = "1.2.1"
domain_derive = "0.1.95"
